// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render the component as disabled 1`] = `
<div
  class="url"
>
  <div
    class="protocols"
  >
    <div
      class="select"
    >
      <button
        class="displayValue flat disabled"
        disabled=""
        type="button"
      >
        <div
          aria-label="http://"
          class="croppedText"
          title="http://"
        >
          <div
            aria-hidden="true"
            class="front"
          >
            http
          </div>
          <div
            aria-hidden="true"
            class="back"
          >
            <span>
              ://
            </span>
          </div>
          <div
            class="whole"
          >
            http://
          </div>
        </div>
        <span
          aria-label="su-angle-down"
          class="su-angle-down toggle"
        />
      </button>
    </div>
  </div>
  <input
    disabled=""
    type="text"
    value=""
  />
</div>
`;

exports[`Render the component with an error 1`] = `
<div
  class="url error"
>
  <div
    class="protocols"
  >
    <div
      class="select"
    >
      <button
        class="displayValue flat"
        type="button"
      >
        <div
          aria-label="http://"
          class="croppedText"
          title="http://"
        >
          <div
            aria-hidden="true"
            class="front"
          >
            http
          </div>
          <div
            aria-hidden="true"
            class="back"
          >
            <span>
              ://
            </span>
          </div>
          <div
            class="whole"
          >
            http://
          </div>
        </div>
        <span
          aria-label="su-angle-down"
          class="su-angle-down toggle"
        />
      </button>
    </div>
  </div>
  <input
    type="text"
    value=""
  />
</div>
`;
